--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical"
     android:layout_marginBottom="16dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -18,6 +18,7 @@
             android:layout_height="48dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/away_team_logo"
+            android:layout_alignParentTop="true"
             android:scaleType="fitCenter"/>
         <!--            android:src="@drawable/ic_team_placeholder" />-->
 
@@ -29,8 +30,12 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="4dp"
+            android:layout_below="@+id/awayTeamLogo"
+            android:scaleType="fitStart"
+            android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"
             android:visibility="gone" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <!-- Game Info Container -->
     <LinearLayout
@@ -65,7 +70,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -77,6 +82,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="8dp"
             android:contentDescription="@string/home_team_logo"
+            android:layout_alignParentTop="true"
             android:scaleType="fitCenter"/>
         <!--            android:src="@drawable/ic_team_placeholder" />-->
 
@@ -87,8 +93,12 @@
             android:text="Home Team"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:layout_below="@+id/homeTeamLogo"
+            android:scaleType="fitStart"
+            android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
             android:visibility="gone" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
