--- a/app/src/main/res/layout/item_goalie_stats.xml
+++ b/app/src/main/res/layout/item_goalie_stats.xml
@@ -13,7 +13,8 @@
         android:layout_height="32dp"
         android:layout_marginEnd="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_player_placeholder"/>
+        android:src="@drawable/ic_player_placeholder"
+        android:background="@drawable/team_logo_placeholder" />
 <!--        android:background="@drawable/circular_background" />-->
 
     <!-- Player Name -->
